# rocklake

./: AGENTS.md  AZURE_CHECKPOINT_FIX.md  CHANGELOG.md  CHECKPOINT_COMPLETE_IMPLEMENTATION.md  CHECKPOINT_PATH_ANALYSIS.md  CONSOLIDATION_FIX.md  CONTRIBUTING.md  Cargo.toml  DELETE_SUPPORT_IMPLEMENTATION.md  README.md  ROADMAP.md  deny.toml  mkdocs.yml  slatedb-ducklake.md  test_delete.py  test_delete_classifier.rs
.github/workflows/: ci.yml  compatibility.yml  corpus.yml  docs.yml  emulator-tests.yml  release.yml  sanitizers.yml
benchmarks/: v0.15-ivm-hardening.json  v0.16-operator-complete.json
bindings/go/: rocklake_test.go
bindings/java/: build.gradle.kts
bindings/nodejs/: Cargo.toml  index.js
bindings/python/: Cargo.toml
crates/rocklake-catalog/: Cargo.toml
crates/rocklake-datafusion/: Cargo.toml
crates/rocklake-pgwire/: Cargo.toml
crates/rocklake-testkit/: Cargo.toml
crates/rocklake-testkit/src/: azure_emulator_harness.rs  backend_compat.rs  catalog_harness.rs  duckdb_container_harness.rs  gcs_emulator_harness.rs  ivm.rs  lib.rs  minio_harness.rs  pgwire_harness.rs
crates/rocklake-testkit/tests/: minio_tests.rs
crates/slateduck-catalog/: Cargo.toml
crates/slateduck-catalog/benches/: catalog_bench.rs
crates/slateduck-catalog/src/: cache.rs  cdc.rs  checkpoint.rs  corpus.rs  cost.rs  encryption.rs  export.rs  extension.rs  lib.rs  manifest.rs  migrate.rs  partition.rs  reader.rs  store.rs  streaming.rs  verify.rs  wal.rs  warmup.rs  writer.rs
crates/slateduck-catalog/src/writer/: mod.rs  snapshot.rs  stats.rs
crates/slateduck-catalog/tests/: benchmarks.rs  catalog_integration.rs  checkpoint_restore.rs  concurrent_writer_fencing.rs  fault_injection_tests.rs  integration_tests.rs  minio_catalog_tests.rs  property_tests.rs  v010_tests.rs  v019_tests.rs  v024_tests.rs  v025_tests.rs  v0275_tests.rs  v0279_advanced_metadata_tests.rs  v027_tests.rs  v028_atomicity_tests.rs  v04_tests.rs  v05_tests.rs  v07_tests.rs  v091_tests.rs  v092_tests.rs  v09_tests.rs
crates/slateduck-core/: Cargo.toml
crates/slateduck-core/src/: encoding.rs  error.rs  keys.rs  latency.rs  lib.rs  mvcc.rs  path.rs  rows.rs  stats.rs  tags.rs  validation.rs
crates/slateduck-core/tests/: fixture_validation.rs  property_tests.rs
crates/slateduck-ffi/: Cargo.toml
crates/slateduck-ffi/src/: lib.rs
crates/slateduck-ivm/: Cargo.toml
crates/slateduck-pgwire/: Cargo.toml
crates/slateduck-pgwire/src/: handler.rs  lib.rs  main.rs  schema_registry.rs  server.rs  session.rs
crates/slateduck-pgwire/src/executor/: catalog.rs  helpers.rs  mod.rs
crates/slateduck-pgwire/tests/: compat_tests.rs  integration_tests.rs  pgwire_network_test.rs  security_tests.rs  v0271_cdc_tests.rs  v0274_postgres_scanner_tests.rs  v0275_conformance_tests.rs  v0276_lifecycle_tests.rs  v0277_schema_registry_tests.rs  v0278_atomicity_tests.rs  v0279_pgwire_tests.rs  v027_pgwire_tests.rs
crates/slateduck-sql/: Cargo.toml
crates/slateduck-sql/src/: gluesql_spike.rs  lib.rs  table_changes.rs
crates/slateduck-sql/src/classifier/: ast.rs  mod.rs  table_selects.rs
crates/slateduck-sql/tests/: cdc_parquet_roundtrip.rs  classifier_v021_tests.rs  v0274_classifier_tests.rs
crates/slateduck-sqlite-vfs/: Cargo.toml
crates/slateduck-sqlite-vfs/src/: lib.rs
crates/slateduck-testkit/: Cargo.toml
crates/slateduck-testkit/src/: catalog_harness.rs  harness.rs  lib.rs  minio_harness.rs  oracle.rs  pgwire_harness.rs
docs/: architecture.md  compatibility.md  index.md
docs/architecture/: cdc-design.md  counter-allocation.md  crate-structure.md  ffi-safety.md  index.md  key-layout.md  mvcc-implementation.md  overview.md  pg-wire-protocol.md  sql-dispatcher.md  streaming-pipeline.md  transaction-model.md  value-encoding.md  writer-fencing.md
docs/concepts/: bounded-sql.md  catalog-vs-data.md  ducklake.md  fact-store-vision.md  immutability.md  incremental-views.md  index.md  key-value-mapping.md  lakehouse-primer.md  mvcc.md  object-store-durability.md  single-writer-many-readers.md  slatedb.md  snapshots.md  writer-fencing.md
docs/contributing/: architecture-guide.md  code-style.md  development-setup.md  index.md  release-process.md  testing.md
docs/deployment/: aws-s3.md  azure.md  binary.md  configuration.md  credential-isolation.md  docker.md  fly-io.md  gcs.md  high-availability.md  index.md  kubernetes.md  lambda.md  minio.md  multi-region.md  networking.md  security.md  tls.md
docs/design-decisions/: bounded-sql.md  immutability-tradeoffs.md  index.md  ivm-architecture.md  ivm-recursive-spike.md  ivm-retrospective.md  key-design-rationale.md  planner-migration.md  protobuf-encoding.md  single-writer.md  strategy-b-first.md  value-encoding.md  what-rocklake-is-not.md  what-slateduck-is-not.md  why-slatedb.md
docs/getting-started/: first-lakehouse.md  index.md  quickstart-cloud.md  quickstart.md  what-is-rocklake.md  what-is-slateduck.md
docs/integration/: cdc-output.md  custom-clients.md  datafusion.md  duckdb-compatibility.md  duckdb.md  index.md  jvm-bindings.md  lambda-reader.md  native-extension.md  pg-tide-relay.md  streaming-ingest.md
docs/internals/: cdc.md  crash-safety.md  index.md  inlined-data.md  mvcc-filter.md  open-findings-verification.md  schema-version.md  sqlstate-mapping.md  tag-allocation.md  type-aware-stats.md  wire-corpus.md
extension/: CMakeLists.txt
extension/include/: rocklake.h  slateduck.h
extension/src/: rocklake_extension.cpp  slateduck_extension.cpp
plans/: blueprint-2.x.md  blueprint.md  documentation-1.md  documentation-gaps.md  ducklake-1.0-spec-gaps-2.md  ducklake-1.0-spec-gaps-3.md  ducklake-1.0-spec-gaps.md  ducklake-queries.md  e2e-integration-tests.md  incremental-view-maintenance-implementation.md  integration-tests-report.md  overall-assessment-1.md  overall-assessment-2.md  pg-trickle-ducklake-support.md  slateduck-differential-dataflow.md  wire-and-sql-resiliency-report-1.md
scripts/: check_benchmark_regression.py  validate_compatibility_manifest.py
site/: 404.html  index.html  sitemap.xml
specification/: queries.md
(+324 files in other folders)
