[package]
name = "slateduck-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
slateduck-core = { path = "../slateduck-core" }
slateduck-catalog = { path = "../slateduck-catalog" }
object_store = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
