[package]
name = "slateduck-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bounded SQL dispatcher for SlateDuck pgwire sidecar"

[dependencies]
slateduck-core = { path = "../slateduck-core" }
sqlparser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
