[package]
name = "slateduck-sqlite-vfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SQLite VFS layer for SlateDuck (future)"

[dependencies]
slateduck-core = { path = "../slateduck-core" }
thiserror = { workspace = true }

[dev-dependencies]
