[package]
name = "slateduck-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slateduck-core    = { path = "../slateduck-core" }
slateduck-catalog = { path = "../slateduck-catalog" }
slateduck-ivm     = { path = "../slateduck-ivm" }
slateduck-pgwire  = { path = "../slateduck-pgwire" }

tokio        = { workspace = true }
tempfile     = { workspace = true }
object_store = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
proptest      = { workspace = true }
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls"] }
